--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cmdk": "^1.0.0",
+    "fuse.js": "^7.0.0",
     "next": "14.1.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.8.1",
     "sass": "^1.71.1"
   },
   "devDependencies": {
